# apple-silicon-detector

./: .gitignore  CHANGELOG.md  Makefile  README.md  build.py  install-online.sh  install.sh  model_util.py  pyproject.toml  requirements.txt  zmq_ipc.py  zmq_onnx_client.py
.github/: FUNDING.yml  pull_request_template.yml
.github/workflows/: checks.md  checks.yaml  pull_request.md  release.yml  release_app.yml
apple_silicon_frigate_detector/: __init__.py  cli.py  gui.py  model_util.py  zmq_onnx_client.py
apple_silicon_frigate_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
detector/: README.md  zmq_onnx_client.py
macos/: AppIcon.icns
macos/scripts/: build_app.sh  make_icns.sh  run_mac.sh
test/: test_zmq_connection.py
